--- a/index.html
+++ b/index.html
@@ -1,7 +1,84 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@600&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="/src/style/style.css">
+	<link rel="icon" href="/src/images/favcon.svg">
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/styles/base16/github.min.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<title></title>
+</head>
+	<body>
+		<div class="wrapper">
+			<div id="particles-js" class="particles-js" ></div>
+			<header>
+				<nav class="mobile-container">
+					<div class="topnav">
+					  <a href="#" class="active">abrooks.dev</a>
+					  <div id="NavButtons">
+						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Intro.html');">Intro</a>
+						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Analysis.html');">Analysis</a>
+						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Design.html');">Design</a>
+						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Programming.html');">Programming</a>
+						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/ContactMe.html');">Contact me</a>
+					  </div>
+					  <a href="javascript:void(0);" class="icon" onclick="Hamburger()">
+						<i class="fa fa-bars"></i>
+					  </a>
+					</div>
+				</nav>
+				<nav class="desktop-container">
+					<ul id="NavButtons">
+						<li><a href="javascript:void(0);" onclick="Pages('/src/pages/Intro.html');">Intro</a></li>
+						<li><a href="javascript:void(0);" onclick="Pages('/src/pages/Analysis.html');">Analysis</a></li>
+						<li><a href="javascript:void(0);" onclick="Pages('/src/pages/Design.html');">Design</a></li>
+						<li><a href="javascript:void(0);" onclick="Pages('/src/pages/Programming.html');">Programming</a></li>
+						<li><a href="javascript:void(0);" onclick="Pages('/src/pages/ContactMe.html');">Contact me</a></li>
+					</ul>
+				</nav>
+			</header>
+			<div id="MyContent">
+				<!--CONTENT EMBED HERE-->
+			</div>
+			<footer>
+				<p>Alec@brooksdev.org <br> powered by notepad.exe</p>
+				<p>&copy; 2023 Alec Brooks. All rights reserved.</p>
+			</footer>
+			<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+			<script src="/src/js/Particles/conf.js"></script>
+			<script src="/src/js/pull.js"></script>
+			<script src="/src/js/send.js"></script>
+			<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.7.0/highlight.min.js"></script>
+			<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+			<script>
+				function highlightContent() {
+					hljs.highlightAll();
+					console.log("hljs.highlightAll() executed.");
+				}
+				function Hamburger() {
+					var x = document.getElementById("NavButtons");
+					if (x.style.display === "block") {
+						x.style.display = "none";
+					} else {
+						x.style.display = "block";
+					}
+				}
+				function CollapseMenu() {
+  					var x = document.getElementById("NavButtons");
+ 					 x.style.display = "none";
+					}
+				window.onload = function() {
+					Pages('/src/pages/Intro.html');
+				};
+			</script>
+		</div>
+	</body>
 </html>
