--- a/src/pages/Intro.html
+++ b/src/pages/Intro.html
@@ -8,7 +8,7 @@
             <p>I recently achieved a milestone by completing the Google Data Analytics Certificate offered through Coursera. This program has equipped me with a solid foundation in various analytical techniques and tools, further fueling my curiosity to explore the vast landscape of data.</p>
             <p>With a unique background spanning five years in the casino gaming industry, my career journey has taken diverse turns. Starting from a role as a craps dealer, my trajectory has led me to my current position in the surveillance department at the Peppermill casino. Here, I engage in player analysis, sparking my deep interest in the world of data analysis. The insights I've gained from player analysis have ignited a passion to delve deeper into data-driven insights and decision-making.</p>
             <p>As I continue to evolve both academically and professionally, I am excited to showcase my journey, projects, and insights through this portfolio. Please feel free to explore and reach out, as I humbly embrace every opportunity to connect and collaborate in the realm of data analysis. Thank you for stopping by.</p>
-            <link href="Flr-Explore-1.html">HERE</link>
+            <link href="Flr-Explore-1.html"></link>
             <ul class="socialLinks">
                 <li><a href="https://www.linkedin.com/in/alec-brooks-1b92a1267/"><i class="fa-brands fa-linkedin-in"></i></a></li>
                 <li><a href="https://github.com/AlecBrooks"><i class="fa-brands fa-github"></i></a></li>
