--- a/src/pages/Analysis.html
+++ b/src/pages/Analysis.html
@@ -15,10 +15,14 @@
                 <p>Upon initial exploration of our dataset, we observe that all present numerical variables appear to be consistent with relatively low deviation.Pasted image 20240802125301.pngAs always, this exploration includes examining missing values. By doing this, we uncover three important facts that may be relevant to our analysis: The dataset includes 344 total rows, The "sex" variable has one missing value and 10 NAs, And two records in our dataset include species and island values but are missing all numerical data. These inconsistencies may become relevant in our analysis and will need to be addressed.</p>
                 <h3>Data Preparation</h3>
                 <p>To begin with data preparation, we removed rows containing NAs and numerically encoded the categorical variables, which grants more flexibility in our analysis. One benefit of this encoding is that it makes it much easier to build a correlation matrix.</p>
+                <p><a href="/src/images/demos/PP/cor matrix.png" target="_blank"><img class="img-post" src="/src/images/demos/PP/cor matrix.png" alt="PP Correlation Matrix"></a></p>
                 <h3>Preliminary Analysis</h3>
                 <p>If we take a look at each quartile of our measurement variables it reveals a significant range and variability, with body mass showing the highest variation. Flipper length and body mass display moderate variability, making them suitable predictors for a linear regression model. </p>
+                <p><a href="/src/images/demos/PP/boxPlots.png" target="_blank"><img class="img-post" src="/src/images/demos/PP/boxPlots.png" alt="PP Box boxPlots"></a></p>
                 <h3>Analysis</h3>
+                <p><a href="/src/images/demos/PP/flip to mass.png" target="_blank"><img class="img-post" src="/src/images/demos/PP/flip to mass.png" alt="PP flip to mass"></a></p>
                 <p>If we plot Flipper Length as our independent variable and Body Mass as our dependent variable, we can see a consistent pattern. The R² score of 0.76 indicates that approximately 76% of the variance in Body Mass can be explained by Flipper Length. After we plot the residuals, we find a relatively low Mean Residual of 0.06.</p>
+                <p><a href="/src/images/demos/PP/flip to mass resid.png" target="_blank"><img class="img-post" src="/src/images/demos/PP/flip to mass resid.png" alt="flip to mass resid"></a></p>
                 <h3>Conclusion</h3>
                 <p>Further, The Standard Error is 393.34. Considering that the range of the dependent variable (Body Mass) is 6300, this Standard Error is relatively low, representing about 6.24% of the Body Mass range. This indicates that the model is reasonably accurate, making Flipper Length an acceptable predictor of Body Mass. This project serves as a good case study for the importance of using methods such as plotting and analyzing residuals to verify findings.</p>
             </li>
