--- a/src/pages/Analysis.html
+++ b/src/pages/Analysis.html
@@ -13,9 +13,8 @@
                 <h3>Analysis</h3><br></br>
                 <p><a href="/src/images/demos/PP/flip to mass.png" target="_blank"><img class="img-post" src="/src/images/demos/PP/flip to mass.png" alt="PP flip to mass"></a></p>
                 <p>If we plot Flipper Length as our independent variable and Body Mass as our dependent variable, we can see a consistent pattern. The R² score of 0.76 indicates that approximately 76% of the variance in Body Mass can be explained by Flipper Length. After we plot the residuals, we find a relatively low Mean Residual of 0.06.</p>
-                <p><a href="/src/images/demos/PP/flip to mass resid.png" target="_blank"><img class="img-post" src="/src/images/demos/PP/flip to mass resid.png" alt="flip to mass resid"></a></p>
                 <h3>Conclusion</h3><br></br>
-                <p>Further, The Standard Error is 393.34. Considering that the range of the dependent variable (Body Mass) is 6300, this Standard Error is relatively low, representing about 6.24% of the Body Mass range. This indicates that the model is reasonably accurate, making Flipper Length an acceptable predictor of Body Mass. This project serves as a good case study for the importance of using methods such as plotting and analyzing residuals to verify findings.</p>
+                <p>Further, The Standard Error is 393.34. Considering that the range of the dependent variable (Body Mass) is 6300, this Standard Error is relatively low, representing about 6.24% of the Body Mass range. This indicates that the model is reasonably accurate, making Flipper Length an acceptable predictor of Body Mass. This project serves as a good case study for the importance of using methods such as plotting and analyzing residuals to verify findings. the full analysis can be seen <a href="https://blog.abrooks.dev/Palmer%20Penguins%20Review">Here</a></p>
             </li>
         </ul>
 </div>
