--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<!--CONTENT EMBED HERE-->
 			</div>
 			<footer>
-				<p>Alec@brooksdev.org <br> powered by notepad.exe</p>
+				<p>Alec@abrooks.dev <br> powered by notepad.exe</p>
 				<p>&copy; 2023 Alec Brooks. All rights reserved.</p>
 			</footer>
 			<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
