--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					  <div id="NavButtons">
 						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Intro.html');">Intro</a>
 						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Analysis.html');">Analysis</a>
-						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Design.html');">Design</a>
+						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Design.html');">Dashboards</a>
 						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Programming.html');">Programming</a>
 						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/ContactMe.html');">Contact me</a>
 					  </div>
@@ -40,7 +40,7 @@
 					<ul id="NavButtons">
 						<li><a href="javascript:void(0);" onclick="Pages('/src/pages/Intro.html');">Intro</a></li>
 						<li><a href="javascript:void(0);" onclick="Pages('/src/pages/Analysis.html');">Analysis</a></li>
-						<li><a href="javascript:void(0);" onclick="Pages('/src/pages/Design.html');">Design</a></li>
+						<li><a href="javascript:void(0);" onclick="Pages('/src/pages/Design.html');">Dashboards</a></li>
 						<li><a href="javascript:void(0);" onclick="Pages('/src/pages/Programming.html');">Programming</a></li>
 						<li><a href="javascript:void(0);" onclick="Pages('/src/pages/ContactMe.html');">Contact me</a></li>
 					</ul>
