--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					  <div id="NavButtons">
 						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Intro.html');">Intro</a>
 						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Analysis.html');">Analysis</a>
-						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Design.html');">Dashboards</a>
+						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Design.html');">Designs</a>
 						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Programming.html');">Programming</a>
 						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/ContactMe.html');">Contact me</a>
 					  </div>
