--- a/src/pages/Intro.html
+++ b/src/pages/Intro.html
@@ -55,6 +55,11 @@
                     <img class="img-carousel" src="/src/images/certificates-certifications/Coursera 4ZE7AJ45X2SQ-1.png" alt="certificate">
                   </a>
                 </li>
+                <li>
+                  <a href="/src/images/certificates-certifications/NCLabs-1.png" target="_blank">
+                    <img class="img-carousel" src="/src/images/certificates-certifications/NCLabs-1.png" alt="certificate">
+                  </a>
+                </li>
             </ul>
         </li>
     </ul>
