--- a/src/pages/Analysis.html
+++ b/src/pages/Analysis.html
@@ -36,7 +36,7 @@
             
                 <h3>Results & Findings</h3>
                 <p>A full report detailing the methodology, statistical analysis, and conclusions can be accessed below:</p>
-                <p><a href="/src/demos/ChessMemory/ChessMemory.html" target="_blank"><strong>View Full Report</strong></a></p>
+                <p><a href="/src/demos/Chess_DATA_220/Chess-s-Impact-on-Memory.pdf" target="_blank"><strong>View Full Report</strong></a></p>
             
                 <h3>Video Summary</h3>
                 <p>For a visual overview of the study and its key findings, watch the summary video here:</p>
