--- a/src/pages/Programming.html
+++ b/src/pages/Programming.html
@@ -8,9 +8,9 @@
                 <p>ChessPI is an R package designed to interact with the Chess.com API to download and analyze saved games. Chess.com records data for every game you play, and this tool makes it easy to retrieve those records for review. Whether you're a chess enthusiast looking to revisit past matches or a data analyst identifying patterns, ChessPI simplifies the process.</p>
                 <h3>Features</h3>
                 <p>ChessPI offers two primary functions:</p>
-                <strong>Archives</strong> – Retrieves a list of available months for a user's game history, making it easier to select specific time ranges for download.</li>
+                <strong>Archives</strong> – Retrieves a list of available months for a user's game history, making it easier to select specific time ranges for download.
                 <br></br> 
-                <strong>Pull</strong> – Downloads a user's game records from Chess.com. Users can specify a username and time range or download all games by default.</li>
+                <strong>Pull</strong> – Downloads a user's game records from Chess.com. Users can specify a username and time range or download all games by default.
                 <br>
                 <h3>Installation</h3>
                 <p>You can install ChessPI using the following commands in R:</p>
