Dashboards notepad link.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 					  <div id="NavButtons">
 						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Intro.html');">Intro</a>
 						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Analysis.html');">Analysis</a>
-						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Design.html');">Designs</a>
+						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Dashboards.html');">Dashboards</a>
 						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/Programming.html');">Programming</a>
 						<a href="javascript:void(0);" onclick="CollapseMenu(); Pages('/src/pages/ContactMe.html');">Contact me</a>
 					  </div>
@@ -40,7 +40,7 @@
 					<ul id="NavButtons">
 						<li><a href="javascript:void(0);" onclick="Pages('/src/pages/Intro.html');">Intro</a></li>
 						<li><a href="javascript:void(0);" onclick="Pages('/src/pages/Analysis.html');">Analysis</a></li>
-						<li><a href="javascript:void(0);" onclick="Pages('/src/pages/Design.html');">Designs</a></li>
+						<li><a href="javascript:void(0);" onclick="Pages('/src/pages/Dashboards.html');">Dashboards</a></li>
 						<li><a href="javascript:void(0);" onclick="Pages('/src/pages/Programming.html');">Programming</a></li>
 						<li><a href="javascript:void(0);" onclick="Pages('/src/pages/ContactMe.html');">Contact me</a></li>
 					</ul>
@@ -50,7 +50,7 @@
 				<!--CONTENT EMBED HERE-->
 			</div>
 			<footer>
-				<p>Alec@abrooks.dev <br> powered by notepad.exe</p>
+				<p>Alec@abrooks.dev <br> powered by <a href="src/demos/LightningCount/index.html" style="text-decoration: none; color: inherit;">notepad.exe</a></p>
 				<p>&copy; 2023 Alec Brooks. All rights reserved.</p>
 			</footer>
 			<script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
@@ -85,3 +85,4 @@
 		</div>
 	</body>
 </html>
+
