--- a/src/pages/Intro.html
+++ b/src/pages/Intro.html
@@ -30,13 +30,8 @@
                   </a>
                 </div>
                 <div class="carousel-item">
-                  <a href="/src/images/certificates-certifications/Coursera 4ZE7AJ45X2SQ-1.png" target="_blank">
-                    <img class="img-carousel" src="/src/images/certificates-certifications/Coursera 4ZE7AJ45X2SQ-1.png" alt="Second slide">
-                  </a>
-                </div>
-                <div class="carousel-item">
-                  <a href="/src/images/certificates-certifications/Coursera 4ZE7AJ45X2SQ-1.png" target="_blank">
-                    <img class="img-carousel" src="/src/images/certificates-certifications/Coursera 4ZE7AJ45X2SQ-1.png" alt="Third slide">
+                  <a href="/src/images/certificates-certifications/NCLabs-1.png" target="_blank">
+                    <img class="img-carousel" src="/src/images/certificates-certifications/NCLabs-1.png" alt="Second slide">
                   </a>
                 </div>
               </div>
