--- a/src/pages/Intro.html
+++ b/src/pages/Intro.html
@@ -34,6 +34,11 @@
                     <img class="img-carousel" src="/src/images/certificates-certifications/NCLabs-1.png" alt="Second slide">
                   </a>
                 </div>
+                <div class="carousel-item">
+                  <a href="/src/images/certificates-certifications/Year 3 Data Analytics Internship Alec Brooks-1.png" target="_blank">
+                    <img class="img-carousel" src="/src/images/certificates-certifications/Year 3 Data Analytics Internship Alec Brooks-1.png" alt="Second slide">
+                  </a>
+                </div>
               </div>
               <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -53,6 +58,11 @@
                 <li>
                   <a href="/src/images/certificates-certifications/NCLabs-1.png" target="_blank">
                     <img class="img-carousel" src="/src/images/certificates-certifications/NCLabs-1.png" alt="certificate">
+                  </a>
+                </li>
+                <li>
+                  <a href="/src/images/certificates-certifications/Year 3 Data Analytics Internship Alec Brooks-1.png" target="_blank">
+                    <img class="img-carousel" src="/src/images/certificates-certifications/Year 3 Data Analytics Internship Alec Brooks-1.png" alt="certificate">
                   </a>
                 </li>
             </ul>
