--- a/src/pages/Intro.html
+++ b/src/pages/Intro.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="carousel-item">
                   <a href="/src/images/certificates-certifications/Year 3 Data Analytics Internship Alec Brooks-1.png" target="_blank">
-                    <img class="img-carousel" src="/src/images/certificates-certifications/Year 3 Data Analytics Internship Alec Brooks-1.png" alt="Second slide">
+                    <img class="img-carousel" src="/src/images/certificates-certifications/Year 3 Data Analytics Internship Alec Brooks-1.png" alt="Third slide">
                   </a>
                 </div>
               </div>
